fixed input overflow by adding scroll ability which closes #2

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 .display {
   grid-column: span 4;
   font-family: 'LCD-Bold';
+  overflow-x: auto;
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
